# Audio-Player

./: .gitignore  CMakeLists.txt  README.md
songs/: songs.txt
src/: gamewindow.cpp  gamewindow.h  main.cpp
